--- a/biuropodrozyprojekt/App.config
+++ b/biuropodrozyprojekt/App.config
@@ -17,9 +17,9 @@
       providerName="System.Data.SqlClient" />
   </connectionStrings>
 	<appSettings>
-		<add key="ConnectionString" value="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=E:\TravelAgencyBD\biuropodrozyprojekt\biuropodrozyprojekt\dataBase.mdf;Integrated Security=True" />
+		<add key="ConnectionString" value="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\dataBase.mdf;Integrated Security=True" />
 	</appSettings>
-  <entityFramework>
+	<entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
         <parameter value="mssqllocaldb" />
